# vector-less-op

./: .env.example  .gitignore  EXECUTION_TRACE.md  README.md  pyproject.toml  requirements.txt
data/: .gitkeep
examples/: __init__.py  example_usage.py
scripts/: setup.sh
test/: test_bloom_filter.py  test_toc_builder.py
vnull/: cli.py  worked-example
vnull/core/: logging.py
vnull/crawler/: bloom_filter.py  js_renderer.py
vnull/indexer/: chunker.py  toc_builder.py
vnull/parser/: __init__.py  dom_pruner.py  html_splitter.py  markdown_converter.py
vnull/retrieval/: bm25_fallback.py  explorer.py  toc_router.py
